--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.0",
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
-    "@types/jest": "27.0.2",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11",
@@ -50,10 +53,11 @@
     "typescript": "4.4.4"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/testing-library__jest-dom": "5.14.1",
     "cross-env": "7.0.3",
-    "@types/testing-library__jest-dom": "5.14.1",
     "http-server": "14.0.0",
+    "prettier": "^2.6.2",
     "wait-on": "6.0.0"
   }
 }
