--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11",
     "@types/react-router-dom": "5.3.2",
+    "mobx": "^6.6.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
