--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11",
@@ -52,10 +54,12 @@
     "mobx-react-lite": "^3.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.31.3",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "17.0.2",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
