--- a/e2e/package.json
+++ b/e2e/package.json
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@cypress/webpack-preprocessor": "^4.1.1",
-    "cypress": "4.0.2",
     "dotenv-safe": "^8.2.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
-    "webpack": "^4.41.5"
+    "webpack": "^4.41.5",
+    "cypress": "^9.7.0"
   }
 }
